# modpackr

./: Cargo.toml  README.md
.github/workflows/: rust.yml
modpackr-cli/: Cargo.toml
modpackr-cli/src/: main.rs  util.rs
modpackr-gui/: Cargo.toml
modpackr-gui/src/: main.rs
src/: curseforge.rs  fabric.rs  forge.rs  lib.rs  modrinth.rs  neoforge.rs  quilt.rs  util.rs
