[workspace]
members = [".", "modpackr-cli", "modpackr-gui"]

[package]
name = "modpackr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
natord = "1.0.9"
quick-xml = "0.31"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
rfd = "0.15.3"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"
zip = "3.0.0"
